--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,8 +3,9 @@ kind: Component
 metadata:
   name: ado
   annotations:
-    github.com/project-slug: ankur29592/ado
+    backstage.io/kubernetes-id: ado
+    dev.azure.com/project-repo: T2R/T2R
 spec:
-  type: other
+  type: service
   lifecycle: unknown
   owner: guests
